# polytrader

./: README.md
backend/: Makefile  README.md  langgraph.json  pyproject.toml
backend/src/polytrader/: __init__.py  configuration.py  gamma.py  graph.py  objects.py  polymarket.py  prompts.py  sn6_api.py  state.py  tools.py  utils.py
backend/src/scripts/: fetch_active_markets.py  fetch_all_events.py  fetch_all_markets.py  fetch_all_tags.py  fetch_current_markets.py
backend/tests/: __init__.py  test_gamma.py  test_polymarket.py
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/: dashboard-client.tsx  filter-bar.tsx  market-card.tsx  market-list.tsx
frontend/app/markets/[id]/: page.tsx
frontend/app/markets/[id]/_components/: market-detail-client.tsx  (+2 more)
frontend/app/profile/: page.tsx
frontend/app/profile/_components/: profile-client.tsx
frontend/components/: decision-card.tsx  header.tsx  login-button.tsx  research-card.tsx  theme-toggle.tsx  trade-execution-card.tsx
frontend/components/providers/: PrivyProvider.tsx  QueryClientWrapper.tsx
frontend/components/ui/: button.tsx  toast-provider.tsx
frontend/lib/: utils.ts  wagmiConfig.ts
frontend/lib/actions/agent/: agent-actions.ts  begin-polytrader.ts  handle-interruption.ts  stream-agent-analysis.ts
frontend/lib/actions/polymarket/: get-filtered-markets.ts  get-gamma-markets.ts  getMarkets.ts
frontend/types/: actions-types.ts  agent-run-types.ts  agent-stream-types.ts  index.ts  market-types.ts
